[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/SaveNode/Mob/mobmini.gd" type="Script" id=1]
[ext_resource path="res://GFX/Charcter/mods-2.png" type="Texture" id=2]
[ext_resource path="res://GFX/Charcter/mods-1.png" type="Texture" id=3]
[ext_resource path="res://GFX/Charcter/mods-3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 26.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34, 23 )

[node name="mobsmini" type="KinematicBody2D"]
collision_layer = 66
collision_mask = 67
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 21.75 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 62 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 2, -10 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 2, 23 )
shape = SubResource( 4 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
